# docs/swagger.yaml
@@ -500,30 +500,31 @@ paths:
   /api/v1/achievements/{id}/attachments:
     post:
       consumes:
-      - application/json
-      description: Upload/Add file URL to an achievement
+      - multipart/form-data
+      description: Upload PDF evidence file for an achievement
       parameters:
       - description: Mongo Achievement ID
         in: path
         name: id
         required: true
         type: string
-      - description: Attachment data
-        in: body
-        name: request
+      - description: PDF File to upload
+        in: formData
+        name: file
         required: true
-        schema:
-          $ref: '#/definitions/models.Attachment'
+        type: file
       produces:
       - application/json
       responses:
         "201":
-          description: Created
+          description: message & url
           schema:
-            type: string
+            additionalProperties:
+              type: string
+            type: object
       security:
       - ApiKeyAuth: []
-      summary: Add Attachment
+      summary: Add Attachment (Upload PDF)
       tags:
       - Achievements
   /api/v1/achievements/{id}/history:
